; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/extres/clk/extr_clk.c_clk_test_freq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/extres/clk/extr_clk.c_clk_test_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.clknode* }
%struct.clknode = type { i64, i32 }

@CLK_SET_USER_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Attempt to access unreferenced clock: %s\0A\00", align 1
@CLK_SET_DRYRUN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clk_test_freq(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.clknode*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @CLK_SET_USER_MASK, align 4
  %10 = load i32, i32* %6, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %6, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.clknode*, %struct.clknode** %13, align 8
  store %struct.clknode* %14, %struct.clknode** %8, align 8
  %15 = load %struct.clknode*, %struct.clknode** %8, align 8
  %16 = getelementptr inbounds %struct.clknode, %struct.clknode* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp sgt i64 %17, 0
  %19 = zext i1 %18 to i32
  %20 = load %struct.clknode*, %struct.clknode** %8, align 8
  %21 = getelementptr inbounds %struct.clknode, %struct.clknode* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = sext i32 %22 to i64
  %24 = inttoptr i64 %23 to i8*
  %25 = call i32 @KASSERT(i32 %19, i8* %24)
  %26 = call i32 (...) @CLK_TOPO_XLOCK()
  %27 = load %struct.clknode*, %struct.clknode** %8, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* @CLK_SET_DRYRUN, align 4
  %31 = or i32 %29, %30
  %32 = call i32 @clknode_set_freq(%struct.clknode* %27, i32 %28, i32 %31, i32 0)
  store i32 %32, i32* %7, align 4
  %33 = call i32 (...) @CLK_TOPO_UNLOCK()
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @CLK_TOPO_XLOCK(...) #1

declare dso_local i32 @clknode_set_freq(%struct.clknode*, i32, i32, i32) #1

declare dso_local i32 @CLK_TOPO_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
